--- a/week3/gallery.html
+++ b/week3/gallery.html
@@ -25,36 +25,36 @@
       <!-- Slideshow Images -->
       <div class="mySlides">
         <div class="numbertext">1 / 8</div>
-        <img src="images/1.jpeg" alt="Spa Image 1" class="slideshow-img">
+        <img src="images/1.jpg" alt="Spa Image 1" class="slideshow-img">
       </div>
 
       <div class="mySlides">
         <div class="numbertext">2 / 8</div>
-        <img src="images/2.jpeg" alt="Spa Image 2" class="slideshow-img">
+        <img src="images/2.jpg" alt="Spa Image 2" class="slideshow-img">
       </div>
       <div class="mySlides">
         <div class="numbertext">3 / 8</div>
-        <img src="images/3.jpeg" alt="Spa Image 3" class="slideshow-img">
+        <img src="images/3.jpg" alt="Spa Image 3" class="slideshow-img">
       </div>
       <div class="mySlides">
         <div class="numbertext">4 / 8</div>
-        <img src="images/4.jpeg" alt="Spa Image 4" class="slideshow-img">
+        <img src="images/4.jpg" alt="Spa Image 4" class="slideshow-img">
       </div>
       <div class="mySlides">
         <div class="numbertext">5 / 8</div>
-        <img src="images/5.jpeg" alt="Spa Image 5" class="slideshow-img">
+        <img src="images/5.jpg" alt="Spa Image 5" class="slideshow-img">
       </div>
       <div class="mySlides">
         <div class="numbertext">6 / 8</div>
-        <img src="images/6.jpeg" alt="Spa Image 6" class="slideshow-img">
+        <img src="images/6.jpg" alt="Spa Image 6" class="slideshow-img">
       </div>
       <div class="mySlides">
         <div class="numbertext">7 / 8</div>
-        <img src="images/7.jpeg" alt="Spa Image 7" class="slideshow-img">
+        <img src="images/7.jpg" alt="Spa Image 7" class="slideshow-img">
       </div>
       <div class="mySlides">
         <div class="numbertext">8 / 8</div>
-        <img src="images/8.jpeg" alt="Spa Image 8" class="slideshow-img">
+        <img src="images/8.jpg" alt="Spa Image 8" class="slideshow-img">
       </div>
 
       <!-- Repeat this pattern for all 8 images -->
