--- a/week3/gallery.html
+++ b/week3/gallery.html
@@ -1,112 +1,192 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <title>Gallery - Wanderlust Voyages</title>
-  <link rel="stylesheet" href="style.css">
-  <style>
-   /* Your CSS styles here */
-  </style>
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-</head>
-<body>
- <div>
-  <header>
-    <h1 class="headeraH1">Wanderlust Voyages | Travel Agency</h1>
-  </header>
-  <nav>
-    <!-- Your navigation links here -->
-  </nav>
-  
-  <main class="services">
-    <h1>Gallery</h1>
+/* Reset Styles */
+body {
+    background: scroll;
+    margin: 0;
+    padding: 0;
+    font-family: Arial, sans-serif;
+    color: #000000;
+    background: linear-gradient(to right, #bcdce8, #d1edda);
+}
 
-    <div class="container">
-      <!-- Slideshow Images -->
-      <div class="mySlides">
-        <div class="numbertext">1 / 8</div>
-        <img src="images/1.jpg" alt="Spa Image 1" class="slideshow-img">
-      </div>
+/* Header Styles */
+header {
+    background: linear-gradient(#63afd0, #ebf8e1);
+    color: #310202;
+    text-align: center;
+    padding: 20px;
+    position: sticky;
+    top: 0; 
+}
 
-      <div class="mySlides">
-        <div class="numbertext">2 / 8</div>
-        <img src="images/2.jpg" alt="Spa Image 2" class="slideshow-img">
-      </div>
-      <div class="mySlides">
-        <div class="numbertext">3 / 8</div>
-        <img src="images/3.jpg" alt="Spa Image 3" class="slideshow-img">
-      </div>
-      <div class="mySlides">
-        <div class="numbertext">4 / 8</div>
-        <img src="images/4.jpg" alt="Spa Image 4" class="slideshow-img">
-      </div>
-      <div class="mySlides">
-        <div class="numbertext">5 / 8</div>
-        <img src="images/5.jpg" alt="Spa Image 5" class="slideshow-img">
-      </div>
-      <div class="mySlides">
-        <div class="numbertext">6 / 8</div>
-        <img src="images/6.jpg" alt="Spa Image 6" class="slideshow-img">
-      </div>
-      <div class="mySlides">
-        <div class="numbertext">7 / 8</div>
-        <img src="images/7.jpg" alt="Spa Image 7" class="slideshow-img">
-      </div>
-      <div class="mySlides">
-        <div class="numbertext">8 / 8</div>
-        <img src="images/8.jpg" alt="Spa Image 8" class="slideshow-img">
-      </div>
+.headeraH1 {
+    margin: 0;
+}
 
-      <!-- Repeat this pattern for all 8 images -->
+.banner {
+    width: 100%;
+    overflow: hidden;
+}
 
-      <a class="prev" onclick="plusSlides(-1)">prev</a> 
-      <a class="next" onclick="plusSlides(1)">next</a> 
-    </div>
+.banner img {
+    width: 100%;
+    height: auto;
+    display: block;
+}
 
-    <!-- Call to Action -->
-    <section class="cta-container">
-      <h2>Ready to Experience Our Services?</h2>
-      <p>Join us today and discover the difference we can make for you!</p>
-      <a href="contact.html" class="cta-button">Contact Us Now</a>
-    </section>
-  </main> 
 
-  <footer>
-    <!-- Your footer content here -->
-  </footer>
- </div>
+/* Navigation Styles */
+nav ul {
+    background-color: #333;
+    color: #ffffff;
+    text-align: center;
+    list-style-type: none;
+    margin: 0;
+    padding: 20px;
+}
 
- <script>
-  let slideIndex = 1;
-  showSlides(slideIndex);
+nav li {
+    display: inline-block;
+}
 
-  function plusSlides(n) {
-    showSlides(slideIndex += n);
-  }
-  
-  function currentSlide(n) {
-    showSlides(slideIndex = n);
-  }
-  
-  function showSlides(n) {
-    let i;
-    let slides = document.getElementsByClassName("mySlides");
+nav a {
+    display: block;
+    color: #fffcfc;
+    text-align: center;
+    padding: 14px 16px;
+    text-decoration: none;
+    transition: background-color 0.3s;  /* Smooth transition for hover effect */
+}
 
-    if (n > slides.length) {
-      slideIndex = 1;
+nav a:hover {
+    background-color: #9d9d9d;  /* Darker shade for hover */
+}
+
+/* Banner Styles */
+.banner-container {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: auto;
+    width: 100%;
+    overflow: hidden;
+}
+
+.centered-banner {
+    padding: 30px;
+    max-width: 80%;
+    height: auto;
+}
+
+/* Main Content Styles */
+main {
+    max-width: 800px;
+    margin: 0 auto;
+    padding: 20px;
+}
+
+.services {
+    margin: 2rem auto;
+    padding: 2rem;
+    box-shadow: 0 0 10px rgba(0,0,0,0.1);
+}
+
+main h3 {
+    margin-top: 20px;
+}
+
+/* Service Columns */
+.services-container {
+    display: flex;
+    justify-content: center;
+    flex-wrap: wrap;
+    gap: 20px;
+}
+
+.service-column {
+    flex-basis: calc(50% - 20px);
+    max-width: calc(50% - 20px);
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    text-align: center;
+}
+
+.service-column img {
+    width: 250px;
+    height: auto;
+    margin-bottom: 10px;
+}
+
+.service-column h3 {
+    margin-bottom: 5px;
+}
+
+/* Media Queries for Responsiveness */
+@media (max-width: 800px) {
+    .service-column {
+        flex-basis: calc(50% - 20px);
+        max-width: calc(50% - 20px);
     }
+}
 
-    if (n < 1) {
-      slideIndex = slides.length;
+@media (max-width: 700px) {
+    .service-column {
+        flex-basis: 100%;
+        max-width: 100%;
     }
+}
 
-    for (i = 0; i < slides.length; i++) {
-      slides[i].style.display = "none";
-    }
+/* Call to Action Styles */
+.cta-container {
+    text-align: center;
+    padding: 20px;
+    background-color: #fbfcfd;
+    margin-top: 30px;
+}
 
-    slides[slideIndex - 1].style.display = "block";
-  }
- </script>
+.cta-button {
+    display: inline-block;
+    padding: 10px 20px;
+    background-color: #009BFF;
+    color: #ffffff;
+    text-decoration: none;
+    border-radius: 5px;
+    font-weight: bold;
+    margin-top: 15px;
+    transition: background-color 0.3s;
+}
 
-</body>
-</html>
+.cta-button:hover {
+    background-color: #0056b3;
+}
+
+/* Footer Styles */
+footer {
+    background-color: #333;
+    color: #e3e3e3;
+    text-align: center;
+    padding: 20px;
+}
+
+footer ul {
+    margin: 0;
+}
+
+footer li {
+    display: inline-block;
+    margin-right: 10px;
+}
+
+footer a {
+    color: #fff;
+    text-decoration: none;
+    transition: color 0.3s;  /* Smooth transition for hover effect */
+}
+
+footer a:hover {
+    color: #ffffff;  /* Lighter color on hover */
+}
+
+footer p {
+    margin: 10px 0 0;
+}
